Changing directory structure and file name changes

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 					});
 					//console.log(selectedTopics)
 					$.ajax({
-						url:'wnyc-npr.php'
+						url:'ajax/getTracks.php'
 						, dataType:'json'
 						, data:{ 
 							  topics: selectedTopics
