--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 
-<script type="text/javascript" src="http://yeahrightproductions.com/dev/player/jwplayer/jwplayer.js"></script>
+<script type="text/javascript" src="js/libs/jwplayer/jwplayer.js"></script>
 </head>
 <body>
 	<select>
@@ -105,7 +105,7 @@
 					  height: 30
 					, width:600
 					, autostart:true
-					, skin: 'http://yeahrightproductions.com/dev/player/five/five.xml'
+					, skin: 'styles/five/five.xml'
 					, 'playlist': playlist
 				}
 				
