--- a/index.html
+++ b/index.html
@@ -1,26 +1,66 @@
 <!doctype html>
 <html>
 <head>
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" href="//ajax.googleapis.com/ajax/libs/jquerymobile/1.4.2/jquery.mobile.min.css" />
+
+<script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+<script src="//ajax.googleapis.com/ajax/libs/jquerymobile/1.4.2/jquery.mobile.min.js"></script>
 
 <script type="text/javascript" src="js/libs/jwplayer/jwplayer.js"></script>
 </head>
 <body>
-	<select>
-		<option value="20">20 minutes</option>
-		<option value="40">40 minutes</option>
-		<option value="60">60 minutes</option>
-		<option value="90">90 minutes</option>
-		<option value="120">2 hours</option>
-		<option value="180">3 hours</option>
-	</select>
-	<label>Music <input type="checkbox" value='1' /></label>
-	<label>News <input type="checkbox" value='2' /></label>
-	<label>Politics <input type="checkbox" value='3' /></label>
-	<button id="btnGetTracks">Get Tracks</button>
-	<div id="stuff">
+
+	<div data-role="page" id="home">
+		<div data-role="panel" data-display="overlay" id="topics">
+			<fieldset data-role="controlgroup"  data-iconpos="right">
+				<label>Music <input type="checkbox" value='1' /></label>
+				<label>News <input type="checkbox" value='2' /></label>
+				<label>Politics <input type="checkbox" value='3' /></label>
+			</fieldset>
+			<a class="ui-btn" href="#home" data-rel="close" data-icon="delete">Close</a>
+		</div>
+		
+		
+		<div data-role="header">
+			<h1>Home</h1>
+		</div>
+
+		<div role="main" class="ui-content">
+			<p><a href="#topics" class="ui-btn">Select Topics</a></p>
+			
+			<select>
+				<option value="20">20 minutes</option>
+				<option value="40">40 minutes</option>
+				<option value="60">60 minutes</option>
+				<option value="90">90 minutes</option>
+				<option value="120">2 hours</option>
+				<option value="180">3 hours</option>
+			</select>
+			
+			<button id="btnGetTracks">Get Tracks</button>
+		</div>
+		
+		<div data-role="footer">&copy; 2014</div>
 	</div>
 	
-	<script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+	
+	
+	<div data-role="page" id="tracks">
+		<div data-role="header">
+			<a href="#home" data-icon="arrow-l">Back</a>
+			<h1>Tracks</h1>
+		</div>
+
+		<div role="main" class="ui-content">
+			<div id="stuff"></div>
+		</div>
+		
+		<div data-role="footer">&copy; 2014</div>
+	</div>
+	
+	
+	
 	<script>
 		function convertMillisecondsToObject(milliseconds) {
               var days, hours, minutes, seconds;
@@ -73,6 +113,7 @@
 							}
 							htm += "</div>";
 							$('#stuff').empty().append(htm);
+							$.mobile.navigate('#tracks')
 						}
 					});
 				});
@@ -103,7 +144,7 @@
 						},options)
 				, mediaOptions = {
 					  height: 30
-					, width:600
+					, width:250
 					, autostart:true
 					, skin: 'styles/five/five.xml'
 					, 'playlist': playlist
